@@ -68,13 +68,18 @@ typedef struct {
   Bit16u dac_packet_size[2];
   Bit32u dac_timer_val[2];
 
+  int mpu_timer_index;
+  Bit8u mpu_outputinit;
+  int mpu_current_timer;
+  Bit32u last_delta_time;
+  Bit8u midi_command;
+  Bit8u midicmd_len;
+  Bit8u midicmd_index;
+  Bit8u midi_buffer[256];
+
   Bit8u devfunc;
 } bx_es1370_t;
 
-
-// forward definitions
-class bx_soundlow_waveout_c;
-class bx_soundlow_wavein_c;
 
 class bx_es1370_c : public bx_devmodel_c, bx_pci_device_stub_c {
 public:
@@ -108,10 +113,15 @@ private:
   BX_ES1370_SMF void closewaveoutput();
   BX_ES1370_SMF Bit16u calc_output_volume(Bit8u reg1, Bit8u reg2, bx_bool shift);
 
+  BX_ES1370_SMF int currentdeltatime();
+  BX_ES1370_SMF void writemidicommand(int command, int length, Bit8u data[]);
+  BX_ES1370_SMF void closemidioutput();
+
   static void es1370_timer_handler(void *);
   void es1370_timer(void);
 
   static Bit32u es1370_adc_handler(void *, Bit32u len);
+  static void mpu_timer_handler(void *);
 
   static Bit32u read_handler(void *this_ptr, Bit32u address, unsigned io_len);
   static void   write_handler(void *this_ptr, Bit32u address, Bit32u value, unsigned io_len);
@@ -122,8 +132,9 @@ private:
 
   bx_soundlow_waveout_c *waveout[2];
   bx_soundlow_wavein_c *wavein;
-  int wavemode;
-  Bit8u wave_changed;
+  bx_soundlow_midiout_c *midiout[2];
+  int wavemode, midimode;
+  Bit8u wave_changed, midi_changed;
 };
 
 #endif
